# ai-session-handler

./: .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: plan-format.md
docs/conversations/: 001-ai-session-handler-architecture-walkthrough.md  INDEX.md
docs/plans/: plan-template-scaffolding-and-rollout.md  provider-agnostic-task-runner.md
src/ai_session_handler/: __init__.py  __main__.py  cli.py  config.py  markers.py  phases.py  plan_templates.py  prompts.py  runner.py  state.py  transcripts.py
src/ai_session_handler/provider_wrappers/: __init__.py  codex_high_exec_filter.py
tests/: test_cli.py  test_codex_high_exec_filter.py  test_markers.py  test_phases.py  test_plan_templates.py  test_prompts.py  test_runner.py  test_state.py
tests/fixtures/prompts/: worker_prompt.txt
